<resources>
    <string name="app_name">2Parcial</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="password">Password</string>
    <string name="acceso_a_mis_notas">Acceso a mis notas</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="registrate">Registrate</string>
    <string name="aun_no_tienes_una_cuenta">¿Aun no tienes una cuenta?</string>
    <string name="tu_nota">Tu Nota</string>
    <string name="ingresa_el_nombre_de_la_nota">Ingresa el nombre de la nota</string>
    <string name="introduce_la_nota">Introduce la nota</string>
</resources>
