<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fei.mx.uv.a2parcial.MainActivity"
    android:orientation="vertical">

    <TextView
        android:text="@string/acceso_a_mis_notas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textAlignment="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edt_LoginCorreo"
        android:hint="@string/correo_electronico" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edt_LoginPass"
        android:hint="@string/password" />

    <Button
        android:text="@string/iniciar_sesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_LoginInitSesion"
        android:onClick="iniciarSesion" />

    <TextView
        android:text="@string/aun_no_tienes_una_cuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:layout_marginTop="50dp" />

    <Button
        android:text="@string/registrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_loginRegistro"
        android:onClick="registrate" />
</LinearLayout>
